# Ecaflop2

./: README.md  TODO.md  pre-push  pyproject.toml  skyspell.yml
app/: settings.py
backend/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  tasks.py
backend/app/: settings.py
backend/hr/: forms.py  models.py  views.py
backend/hr/migrations/: 0001_initial.py
backend/templates/hr/: add_employee.haml  add_team.haml  add_to_team.haml  address.haml  base.haml  basic_info.haml  contract.haml  delete_employee.haml  employee.haml  employees.haml  index.haml  members.haml  promote.haml  reset_db.haml  teams.haml
backend/tests/: conftest.py  integration_tests.py
hr/: models.py  urls.py  views.py
infra/: README.md  automation.py
infra/nginx/: nginx.conf
infra/nginx/servers/: a  b  default  sub.conf.in
infra/nginx/upstreams/: conf.in
infra/stress-test/: Cargo.toml
infra/stress-test/src/: lib.rs  main.rs
infra/systemd/: gunicorn.in.service  gunicorn@.service  gunicorn@.socket
java/: pom.xml
java/.run/: End to End Tests.run.xml  Integration Tests.run.xml
java/spring-boot/: .sdkmanrc
java/spring-boot/src/main/java/com/example/springboot/: Greeting.java  GreetingController.java
java/src/main/java/info/dmerej/hr/: Application.java  Employee.java  EmployeeController.java  EmployeeDeserializer.java  EmployeeSerializer.java  Greeting.java  GreetingController.java  MvcConfig.java  Repository.java  SavedEmployee.java
java/src/main/resources/: application.properties
java/src/test/java/info/dmerej/hr/: ApplicationTests.java  RepositoryTests.java
java/src/test/java/info/dmerej/hr/tests/end2end/: AddTeamTest.java  TestIndex.java
java/src/test/java/info/dmerej/hr/tests/integration/: AddTeamTest.java
javascript/: .gitignore  package.json
javascript/src/: app.js  repository.js
javascript/tests/: app.test.js  repository.test.js
python/: README.md  TODO.md  pyproject.toml  requirements.txt  tasks.py
python/app/: settings.py  urls.py
python/end_to_end_tests/: test_index.py
python/hr/: models.py  urls.py  views.py
python/hr/components/: address.html  legal.html
python/hr/migrations/: 0001_initial.py  0002_auto_20211102_1346.py  0002_auto_20211229_1636.py  0003_alter_employee_email.py  0004_auto_20211102_1420.py  0005_alter_employee_address_line2.py  0006_auto_20211229_1247.py  0007_alter_employee_address_line2.py  0008_auto_20211229_1303.py
python/integration_tests/: test_teams.py
python/templates/hr/: add_employee.html  add_to_team.html  address.html  base.html  basic.html  db_confirm_delete.haml  delete_employee.html  employee.html  employee_create.haml  employee_update.haml  employees.html  index.html  promote.html  reset_db.html  teams.html
python/tests/: conftest.py  integration_tests.py  test_create.py  test_update.py
templates/hr/: base.haml  employee_confirm_delete.haml  employee_edit.haml  employee_form.haml  employee_list.haml  index.haml
tests/: conftest.py  pyproject.toml  tasks.py  test_api.py  test_create.py  test_end_to_end.py  test_update.py  tests.py
tests/end-to-end/: playwright_tests.py  requirements.txt
tests/integration/java/src/test/java/info/dmerej/hr/: AddTeamTest.java
tests/integration/js/tests/: add-team.test.js
tests/integration/python/: integration_tests.py  test_add_employee.py
ts/: README.md
ui/: package.json
ui/public/: index.html
ui/src/: App.vue  Client.js  Employee.js
ui/src/components/: AddEmployee.vue  AddEmployeeForm.vue  DatabaseReset.vue  DeleteEmployee.vue  EditAddress.vue  EditBasic.vue  EditEmployee.vue  EmployeeForm.vue  EmployeeRow.vue  EmployeesList.vue  HelloWorld.vue
ui/src/router/: index.js
ui/src/views/: AddEmployee.vue  AddEmployeeView.vue  DeleteEmployeeView.vue  EditAddressView.vue  EditBasicView.vue  EditEmployee.vue  EditEmployeeView.vue  ListEmployees.vue  ListEmployeesView.vue  ResetDatabase.vue  ResetDatabaseView.vue
