[tool.isort]
profile = "black"

[tool.poetry]
name = "hr-db-manager"
version = "0.0.1"
description = "HR Database Manager"
authors = ["Dimitri Merejkowsky <dimitri@dmerej.info>"]
readme = "README.md"
license = "BSD-3-Clause"
repository = ""


[tool.poetry.dependencies]
python = "^3.6.2"

django = "^3.2.10"
django-browser-reload = "^1.0.0"
django-cors-headers = "^3.10.1"
django-mustache = "^1.1.2"
python-dotenv = "^0.19.2"
gunicorn = "^20.1"

[tool.poetry.dev-dependencies]
invoke = "^1.5.0"
pywatchman = "^1.4.1"

black = "21.10b0"
isort = "^5.7.0"
pytest-django = "^4.4.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
